# python-base

./: .gitignore  .ruffrc  Makefile  README.md  mypy.ini  newpy.sh  ptw.ini  pyproject.toml  pyright.json  readme.md  test_times.txt
.github/workflows/: ci.yml
scripts/: init_repo.sh
src/: __main__.py
